# pafd

./: AGENTS.md  Cargo.toml  LICENSE  README.md  pafd.service  rust-toolchain.toml
.cargo/: config.toml
src/: cli.rs  client.rs  lib.rs  main.rs  server.rs
src/tts/: mod.rs  process.rs
src/tts/providers/: edge.rs  google.rs  mod.rs  piper.rs
