[package]
name = "pafd"
version = "0.1.5"
edition = "2024"
license = "MIT"
authors = ["Andrew Brey <34140052+andrewbrey@users.noreply.github.com>"]
repository = "https://github.com/andrewbrey/pafd"

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = "0.8.9"
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
dirs = "6.0.0"
futures-util = { version = "0.3.32", default-features = false, features = [
  "std",
  "sink",
] }
reqwest = { version = "0.13.2", features = ["json", "query", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "process",
  "io-util",
  "fs",
  "signal",
  "sync",
] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
which = "8.0.2"

[lints]
clippy.all = { level = "warn", priority = -1 }
clippy.pedantic = { level = "warn", priority = -1 }
clippy.nursery = { level = "warn", priority = -1 }

rust.unreachable-pub = "warn"
rust.unnameable-types = "warn"

# Individually enabled clippy lints (from restriction group, must be opted in by name)
clippy.pub_use = "warn"

# Permanently allowed lints
clippy.new_without_default = "allow"
